# Colorgram

./: CMakeLists.txt  README.md  builder.hpp  cologram_build.cpp  cologram_stats.cpp  colorgram_build.cpp  colorgram_tool.sh  config.h  create_environment.sh  cut_sides.py  dbg.cpp  dbg.h  dbg_wrapper.hpp  select_support_mcl2.hpp  succinct_dbg.cpp  succinct_dbg.h  succinct_dbg_tests.cpp  utils.hpp
tests/: 1.fna  2.fna  3.fna  test_kmers_all.txt  test_lst.txt
